Install new Swedish manpages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Nov 17 17:20:52 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/sv/Makefile.in: install dpkg-query and dpkg-deb manpages
+
 Sat Nov 17 17:16:44 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/control: add missing space in dpkg-doc description
