--- a/debian/changelog
+++ b/debian/changelog
@@ -42,8 +42,8 @@ dpkg (1.10) unstable; urgency=low
     * Move /usr/info/dir to /usr/share/info/dir.  Closes: #67174.
     * If /usr/share/info doesn't exist, print a message saying so,
       instead of the confusing "couldn't lock" error.  Closes: #2531.
-    * If /usr/share/info/dir doesn't exist, try to copy the backup from
-      /var/backups/infodir.bak.
+    * If /usr/share/info/dir doesn't exist, or is empty, try to copy the
+      backup from /var/backups/infodir.bak.  Closes: #121309.
     * Add a --remove-exactly option, and allow for relative filenames.
       Closes: #92650.
     * Use the section from the .info file if --section is not given.
