When parsing stdin, md5sum now displays '-' as the filename, to match textutils md5sum.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Nov 28 17:30:16 CST 2001 Adam Heath <doogie@debian.org>
+
+  * utils/md5sum.c: When parsing stdin, md5sum now displays '-' as the
+    filename, to match textutils md5sum.
+
 Wed Nov 28 17:20:28 CST 2001 Adam Heath <doogie@debian.org>
 
   * scripts/install-info.pl: Copy dir from backup if the file is empty
