--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,8 @@ dpkg (1.10) unstable; urgency=low
     * --calign|--align|--maxwidth are now ignored.
   * strip enoent as well. Closes: Bug#112378
   * Fix format error in Dutch translation. Closes: Bug#113120
+  * When parsing stdin, md5sum now displays '-' as the filename, to match
+    textutils md5sum.  Closes: #121489.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
