--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ dpkg (1.10) unstable; urgency=low
   * Split dselect into its own package. dpkg Pre-Depends on it
     to make sure no weird things happen during an upgrade but this
     will allow us to make dselect option at some point in the future.
+    Closes: #114249.
   * Make colours in dselect user-configurable. Closes: Bug#103994
   * Make Q do an abort in the method selection menu to make things more
     consistent with the package list
