Make dpkg-checkbuilddeps always check for build-essential.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Nov 28 18:11:38 CST 2001 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-checkbuilddeps.{1,pl}: Make dpkg-checkbuilddeps always
+    check for build-essential.
+
 Wed Nov 28 17:46:23 CST 2001 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Note that the dselect.deb split closes a bug.
