--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,8 @@ dpkg (1.10) unstable; urgency=low
     textutils md5sum.  Closes: #121489.
   * Apply patch from bug, to give update-alternatives a --list command.
     Closes: #120924.
+  * Make dpkg-checkbuilddeps always check for build-essential.  Closes:
+    #118420.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
