--- a/scripts/dpkg-checkbuilddeps.1
+++ b/scripts/dpkg-checkbuilddeps.1
@@ -5,8 +5,9 @@ dpkg-checkbuilddeps -- check build dependencies and conflicts
 \fBdpkg-checkbuilddeps\fR -B [\fIcontrol-file\fR]
 .SH DESCRIPTION
 This program checks the installed packages in the system against the build
-dependencies and build conflicts listed in the control file. If any are
-not met, it displays them and exits with a nonzero return code.
+dependencies and build conflicts listed in the control file. It also checks
+for build-essential. If any are not met, it displays them and exits with a
+nonzero return code.
 .P
 By default, \fBdebian/control\fR is read, but an alternate control filename
 may be specified on the command line.
