--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Dec 31 15:25:46 CET 2001  Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-architecture.pl: fix syntax error
+
 Wed Nov 28 18:11:38 CST 2001 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-checkbuilddeps.{1,pl}: Make dpkg-checkbuilddeps always
