No longer set LC_CTYPE and switch to using cisalpha and cisdigit instead

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Dec 31 17:38:26 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/main.cc, main/main.c, main/query.c: no longer set LC_CTYPE
+    to C since that breaks the braindead gettext.
+  * dpkg-deb/build.c, lib/dbmodify.c, lib/vercmp.c, main/remove.c: Switch
+    to using cisdigit and cisalpha.
+
 Mon Dec 31 17:28:10 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/utils.c: new file with general utility functions. Add
