use space seperated output instead of comma seperated

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan  2 15:00:26 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-checkbuilddeps.pl: use space seperated output instead
+    of comma seperated
+
 Tue Jan  1 14:10:55 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * archtable, scripts/dpkg-architecture.pl: Update SuperH architecture
