--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,8 @@ dpkg (1.10) unstable; urgency=low
     Closes: #120924.
   * Make dpkg-checkbuilddeps always check for build-essential.  Closes:
     #118420.
+  * Use space seperated output instead of comma seperated in
+    dpkg-checkbuilddeps
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
