Update default ignore expression to also match *~ and *.swp in subdirs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan  2 16:08:02 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-source.pl: Update default ignore expression to also
+    match *~ and *.swp in subdirs.
+
 Wed Jan  2 15:00:26 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-checkbuilddeps.pl: use space seperated output instead
