--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,8 @@ dpkg (1.10) unstable; urgency=low
     #118420.
   * Use space seperated output instead of comma seperated in
     dpkg-checkbuilddeps
+  * Update default ignore expression in dpkg-source to also match *~ and
+    *.swp in subdirs. Closes: Bug#127458
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
