--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jan 18 20:40:42 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-source.pl: Use -Z option for patch and set TZ to UTC0
+    when calling diff. This gives us reliable timestamps in diffs.
+
 Thu Jan  3 15:49:14 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-genchanges.pl, scripts/dpkg-scanpackages.pl,
