--- a/debian/changelog
+++ b/debian/changelog
@@ -67,6 +67,8 @@ dpkg (1.10) unstable; urgency=low
   * Update default ignore expression in dpkg-source to also match *~ and
     *.swp in subdirs. Closes: Bug#127458
   * Handle errors when verifying md5sums. Closes: Bug#102367
+  * dpkg-source now uses reliable timestamps for changed files.
+    Closes: Bug#105750
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
