Fix typo in ssd help message

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 30 00:24:36 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/start-stop-daemon.c: Fix tyop in help message
+
 Fri Jan 18 20:40:42 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-source.pl: Use -Z option for patch and set TZ to UTC0
