--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 30 00:29:07 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * split/Makefile.in: create parts directory
+
 Wed Jan 30 00:24:36 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/start-stop-daemon.c: Fix tyop in help message
