exit with non-zero exitcode when doing --display for a nonexiting alternative

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,8 +60,8 @@ dpkg (1.10) unstable; urgency=low
     textutils md5sum.  Closes: #121489.
   * Apply patch from bug, to give update-alternatives a --list command.
     Closes: #120924.
-  * Make dpkg-checkbuilddeps always check for build-essential.  Closes:
-    #118420.
+  * Make dpkg-checkbuilddeps always check for build-essential.
+    Closes: Bug#118420.
   * Use space seperated output instead of comma seperated in
     dpkg-checkbuilddeps
   * Update default ignore expression in dpkg-source to also match *~ and
@@ -70,6 +70,8 @@ dpkg (1.10) unstable; urgency=low
   * dpkg-source now uses reliable timestamps for changed files.
     Closes: Bug#105750
   * Fix typo in start-stop-daemon help message. Closes: Bug#131439
+  * update-alternative exits with a non-zero exit code when displaying
+    a non-existing alternative. Closes: Bug#131496
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
