--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan 30 10:31:38 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/update-alternative.pl: exit with non-zero exitcode when
+    doing --display for a nonexisting alternative
+
 Wed Jan 30 00:29:07 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * split/Makefile.in: create parts directory
