Update French manpages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jan 31 14:56:38 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/fr/install-info.8, doc/fr/update-alternatives.8: udpated with
+    new version from Philippe Batailler
+
 Wed Jan 30 10:31:38 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/update-alternative.pl: exit with non-zero exitcode when
