--- a/doc/fr/update-alternatives.8
+++ b/doc/fr/update-alternatives.8
@@ -5,7 +5,7 @@
 .\" by the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.  There is NO WARRANTY.  You can
 .\" find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-.\" traduction de la révision CVS 1.7
+.\" traduction de la révision CVS 1.8
 .TH UPDATE-ALTERNATIVES 8 "19 January 1998" "Debian Project" "dpkg utilities"
 .SH NOM
 update-alternatives \- maintenance des liens symboliques déterminant les noms
@@ -32,6 +32,11 @@ par défaut de certaines commandes
 .B update-alternatives
 .RI [ options ]
 .B --display
+.I nom
+.PP
+.B update-alternatives
+.RI [ options ]
+.B --list
 .I nom
 .PP
 .B update-alternatives
@@ -300,6 +305,9 @@ quelles autres alternatives sont disponibles (et les liens secondaires
 associés),
 et l'alternative actuellement installée qui possède la priorité la plus
 élevée.
+.TP
+\fB--list\fR \fIlink\fR
+Affiche toutes les cibles du groupe de liens.
 .SH FICHIERS
 .TP
 .I /etc/alternatives/
