--- a/utils/start-stop-daemon.8
+++ b/utils/start-stop-daemon.8
@@ -1,5 +1,4 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.TH START\-STOP\-DAEMON 8 "15th March 1997" "Debian Project" "Debian GNU/Linux"
+.TH START\-STOP\-DAEMON 8 "15th March 1997" "Debian Project" "dpkg utilities"
 .SH NAME
 start\-stop\-daemon \- start and stop system daemon programs
 .SH SYNOPSIS
