Use gzip -c in install-info

--- a/debian/changelog
+++ b/debian/changelog
@@ -72,6 +72,7 @@ dpkg (1.10) unstable; urgency=low
   * Fix typo in start-stop-daemon help message. Closes: Bug#131439
   * update-alternative exits with a non-zero exit code when displaying
     a non-existing alternative. Closes: Bug#131496
+  * Use gzip -c in install-info. Closes: Bug#131758
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
