--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 31 21:34:14 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/install-info.pl: add -c option to gzip invocation
+
 Thu Jan 31 14:56:38 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/fr/install-info.8, doc/fr/update-alternatives.8: udpated with
