Update French translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ dpkg (1.10) unstable; urgency=low
   * Improve dpkg-archtecture documentation. Closes: Bug#104232
   * Update German translation. Closes: Bug#97239
   * Update Polish translation. Closes: Bug#115783
+  * Update French translation.
   * Add German md5sum manpage
   * Improve dselect manpage. Closes: Bug#103839
   * dpkg-name(1) no longer mentions the non-existing dpkg(5) manpage.
