--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb  1 13:58:59 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/fr.po: updated.
+
 Thu Jan 31 21:34:14 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/install-info.pl: add -c option to gzip invocation
