--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Feb  1 16:41:23 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/start-stop-daemon.c: Merge patch from Andres Voegele
+    <voegelas@users.sourceforge.net> to add HP-UX support
+    
 Fri Feb  1 13:58:59 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * po/fr.po: updated.
