--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,7 @@ dpkg (1.10) unstable; urgency=low
   * update-alternative exits with a non-zero exit code when displaying
     a non-existing alternative. Closes: Bug#131496
   * Use gzip -c in install-info. Closes: Bug#131758
+  * start-stop-daemon works on HP-UX now. Closes: Bug#130130
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
