Add some ssd things

--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@ optlib:
 start-stop-daemon
 * write pidfile before we chroot?
 * capabilities support
+* don't close FD's
+* add autoconf test for TIOCNOTTY
 
 dpkg
 * integrate debconf (add new status)
