--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Feb  1 17:37:24 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * configure.in: add test for setsid
+  * utils/start-stop-daemon.c: use setsid if it exists and only use
+    setpgid if it does not exist
+
 Fri Feb  1 16:41:23 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/start-stop-daemon.c: Merge patch from Andres Voegele
