--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Feb  1 19:10:02 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/ca.po: New Catalan translation
+  * configure.in: Add ca to LINGUAS
+
 Fri Feb  1 17:37:24 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * configure.in: add test for setsid
