--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Feb  2 00:18:04 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * automake/dpkg.m4: add DPKG_CHECK_DEFINE
+  * configure.in: test for TIOCNOTTY in sys/ioctl.h
+  * utils/start-stop-daemon.c: move tty change outside OS specific ifdef
+    and use the new TIOCNOTTY test instead
+
 Fri Feb  1 19:10:02 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * po/ca.po: New Catalan translation
