--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb  2 16:23:43 CET 2002 Adam Heath <doogie@debian.org>
+
+  * po/da.po: Updated
+
 Sat Feb  2 00:18:04 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * automake/dpkg.m4: add DPKG_CHECK_DEFINE
