--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Sat Feb  2 16:23:43 CET 2002 Adam Heath <doogie@debian.org>
+Sat Feb  2 16:23:43 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * po/da.po: Updated
 
