--- a/ChangeLog
+++ b/ChangeLog
@@ -35,7 +35,7 @@ Thu Jan 31 21:34:14 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
 Thu Jan 31 14:56:38 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
-  * doc/fr/install-info.8, doc/fr/update-alternatives.8: udpated with
+  * doc/fr/install-info.8, doc/fr/update-alternatives.8: updated with
     new version from Philippe Batailler
 
 Wed Jan 30 10:31:38 CET 2002 Wichert Akkerman <wakkerma@debian.org>
