Added Brazilian manpage translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ dpkg (1.10) unstable; urgency=low
   * Update French translation.
   * Add Catalan translation
   * Add German md5sum manpage
+  * Add Brazilian update-alternatives manpage. Closes: Bug#122132
   * Improve dselect manpage. Closes: Bug#103839
   * dpkg-name(1) no longer mentions the non-existing dpkg(5) manpage.
     Closes: Bug#104214
