Make dpkg-gencontrol not warn about Uploaders

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb  2 22:52:50 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-gencontrol: Make dpkg-gencontrol not warn about Uploaders.
+
 Sat Feb  2 18:14:24 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * man/Makefile.in: add pt_BR to SUBDIRS
