--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb  2 23:00:25 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/changelog: add changes from 1.9.18 and 1.9.19
+
 Sat Feb  2 22:59:06 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/install-info.pl: Continue to read all data from a pipe, until
