--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ dpkg (1.10) unstable; urgency=low
   * Update German translation. Closes: Bug#97239
   * Update Polish translation. Closes: Bug#115783
   * Update French translation.
+  * Update Brazilian translation.
   * Add Catalan translation
   * Add German md5sum manpage
   * Add Brazilian update-alternatives manpage. Closes: Bug#122132
