--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb  3 22:21:08 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/fr.po: Updated
+
 Sun Feb  3 20:44:20 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * po/pt_BR.po: Updated
