check fgetc() for EOF return so we don't spin if we can't read input

--- a/debian/changelog
+++ b/debian/changelog
@@ -78,6 +78,7 @@ dpkg (1.10) unstable; urgency=low
     a non-existing alternative. Closes: Bug#131496
   * Use gzip -c in install-info. Closes: Bug#131758
   * start-stop-daemon works on HP-UX now. Closes: Bug#130130
+  * Fix dselect spin when run without input. Closes: Bug#132476
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
