--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb  6 12:29:18 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/method.cc: check fgetc() for EOF return so we don't spin
+    if we can't read input
+
 Sun Feb  3 22:21:08 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * po/fr.po: Updated
