Fix bogosity in previous update

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -59,11 +59,14 @@ msgstr "Sinal no. %d"
 
 #: lib/database.c:177
 #, c-format
+msgid ""
+"couldn't allocate memory for strdup in findpackage(%s)"
+msgstr ""
+"n=E3o foi poss=EDvel alocar mem=F3ria para strdup in findpackage(%s)"
+
 #: lib/database.c:247
 #, c-format
-msgid ""
-"couldn't allocate memory for strdup in findpackage(%s)não fo possível alocar "
-"memória para strdup em findpackage(%s)size %7d occurs %5d times\n"
+msgid "size %7d occurs %5d times\n"
 msgstr "tamanho %7d ocorre %5d vezes\n"
 
 #: lib/database.c:248
