--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb  7 00:38:42 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/pt_BR.po: Fix bogosity in previous update
+
 Thu Feb  7 00:28:35 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/update-alternatives.pl: fix logic error, alternatives are
