copy origin and bugs info into status file

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb  7 15:27:35 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/processarc.c: copy origin and bugs info into status file
+
 Thu Feb  7 00:38:42 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * po/pt_BR.po: Fix bogosity in previous update
