Fix unclear wording of changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -79,7 +79,7 @@ dpkg (1.10) unstable; urgency=low
   * Use gzip -c in install-info. Closes: Bug#131758
   * start-stop-daemon works on HP-UX now. Closes: Bug#130130
   * Fix dselect spin when run without input. Closes: Bug#132476
-  * Update-alternatives correctly restored an alternative to auto mode
+  * Update-alternatives now correctly restores an alternative to auto mode
     when removing a manually selected alternative. Closes: Bug#132632
   * Copy bugs and origin information into status file. Closes: Bug#132714
 
