Improve working of --config output

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,7 +40,6 @@ dpkg (1.10) unstable; urgency=low
   * Add configurable package listing support to dpkg-query
   * Handle window resize in dselect main menu. Closes: Bug#98275
   * update-rc.d moved to the sysvinit package. Closes: Bug#108887,#109282
-  * Update French translation
   * Add --showformat and --show options to dpkg-deb and dpkg-query to
     allow one to customize the output format
   * several install-info cleanups:
@@ -82,6 +81,7 @@ dpkg (1.10) unstable; urgency=low
   * Update-alternatives now correctly restores an alternative to auto mode
     when removing a manually selected alternative. Closes: Bug#132632
   * Copy bugs and origin information into status file. Closes: Bug#132714
+  * Improve wording of update-alternatives --config text. Closes: Bug#133035
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
