--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 10 01:16:58 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/update-alternatives.pl: Improve working of --config output
+
 Thu Feb  7 15:27:35 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * main/processarc.c: copy origin and bugs info into status file
