--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Feb 10 01:31:57 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * man/en/dselect.cfg.5, man/en/dpkg.cfg.5: new files
+  * man/en/Makefile.in: install new manpages
+
 Sun Feb 10 01:16:58 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/update-alternatives.pl: Improve working of --config output
