--- a/debian/changelog
+++ b/debian/changelog
@@ -82,6 +82,7 @@ dpkg (1.10) unstable; urgency=low
     when removing a manually selected alternative. Closes: Bug#132632
   * Copy bugs and origin information into status file. Closes: Bug#132714
   * Improve wording of update-alternatives --config text. Closes: Bug#133035
+  * Add manpages for dpkg.cfg and dselect.cfg. Closes: Bug#132901
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
