Updates and fixes after move

--- a/man/sv/deb-old.5
+++ b/man/sv/deb-old.5
@@ -1,5 +1,5 @@
-.\" Translation of CVS revision 1.6
-.TH DEB-OLD 5 "Januari 2000" "Debianprojektet" "Debian Linux"
+.\" Translation of CVS revision 1.1
+.TH DEB-OLD 5 "Januari 2000" "Debianprojektet" "Debian"
 .SH NAMN
 deb-old \- Debians gamla binärpaketformat
 .SH SYNOPS
