--- a/man/sv/dpkg-split.8
+++ b/man/sv/dpkg-split.8
@@ -1,7 +1,7 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Ian Jackson
-.\" Translation of CVS revision 1.4
-.TH dpkg-split 1 "23 juni 1996" "Debian GNU/Linux"
+.\" Translation of CVS revision 1.5
+.TH dpkg-split 1 "23 juni 1996" "Debianprojektet" "dpkg-verktygen"
 .SH NAMN
 dpkg\-split \- Verktyg för att dela/slå ihop Debianpaket
 .SH SYNOPS
