--- a/man/sv/deb-control.5
+++ b/man/sv/deb-control.5
@@ -1,14 +1,14 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Author: Raul Miller
 .\" Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-.\" Translation of CVS revision 1.6
-.TH DEB-CONTROL 5 "Januari 2000" "Debianprojektet" "Debian GNU/Linux"
+.\" Translation of CVS revision 1.1
+.TH DEB-CONTROL 5 "Januari 2000" "Debianprojektet" "dpkg-verktygen"
 .SH NAMN
-deb\-control \- Debian GNU/Linux filformat för paketkontrollfiler
+deb\-control \- Debians filformat för paketstyrfiler
 .SH SYNOPS
 control
 .SH BESKRIVNING
-Varje Debianpaket innehåller huvudkontrollfilen "control", vilken i sig
+Varje Debianpaket innehåller huvudstyrfilen "control", vilken i sig
 innehåller ett antal fält.
 Varje fält börjar med en etikett, såsom
 .B Package
