--- a/man/sv/start-stop-daemon.8
+++ b/man/sv/start-stop-daemon.8
@@ -1,6 +1,5 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.\" Translation of CVS revision 1.11
-.TH START\-STOP\-DAEMON 8 "15 mars 1997" "Debianprojektet" "Debian GNU/Linux"
+.\" Translation of CVS revision 1.12
+.TH START\-STOP\-DAEMON 8 "15 mars 1997" "Debianprojektet" "dpkg-verktygen"
 .SH NAMN
 start\-stop\-daemon \- startar och stoppar bakgrundsprocesser
 .SH SYNOPS
