Fix numerous copy'n'paste errors.

--- a/man/en/dselect.cfg.5
+++ b/man/en/dselect.cfg.5
@@ -2,16 +2,16 @@
 .SH NAME
 dselect.cfg \- dselect configuration file
 .SH DESCRIPTION
-This file contains default options for dpkg. Each line contains a
+This file contains default options for dselect. Each line contains a
 single option which is exactly the same as a normal commandline
-option for dpkg except for the leading dashes which are not used
+option for dselect except for the leading dashes which are not used
 here. Comments are allowed by starting a line with a hash sign
 ("\fB#\fR").
 .SH FILES
-.I /etc/dselect/dpkg.cfg
+.I /etc/dpkg/dselect.cfg
 ~/.dselect.cfg
 .SH AUTHOR
 See \fB/usr/share/doc/dpkg/THANKS\fP for the list of people who have
-contributed to \fBdpkg\fP .
+contributed to \fBdselect\fP .
 .SH SEE ALSO
 .BR dselect (8)
