--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Feb 16 15:14:30 CET 2002 peter karlsson <peterk@debian.org>
+
+  * man/sv/deb-control.5, deb-old.5, deb.5, dpkg-split.8,
+    start-stop-daemon.8: Fixed CVS revision pointers after move and
+    updated translations to match latest versions.
+  * man/sv/dpkg.cfg.5, man/sv/dselect.cfg.5: Translated new files.
+  * man/en/dselect.cfg.5: Fixed numerous copy'n'paste errors.
+
 Sun Feb 10 01:31:57 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
   * man/en/dselect.cfg.5, man/en/dpkg.cfg.5: new files
