Fix broken translations.

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -3116,7 +3116,7 @@ msgid ""
 "and dpkg --contents (= dpkg-deb --contents) to list their contents.\n"
 msgstr ""
 "Use dpkg --info (= dpkg-deb --info) para examinar arquivos do pacote,\n"
-"e dpkg --contents (= dpkg-deb --contents) para listar seu conteúdo."
+"e dpkg --contents (= dpkg-deb --contents) para listar seu conteúdo.\n"
 
 #: dpkg-deb/main.c:46 main/query.c:430
 msgid "Debian `"
@@ -3204,12 +3204,12 @@ msgstr "%s: sem loop de compressão de cópia"
 #: dpkg-deb/build.c:175
 #, c-format
 msgid "%s: internal gzip error: read: `%s'"
-msgstr "%s: erro interno do gzip: read: `%s'\n"
+msgstr "%s: erro interno do gzip: read: `%s'"
 
 #: dpkg-deb/build.c:185
 #, c-format
 msgid "%s: internal gzip error: write: `%s'"
-msgstr "%s: erro interno do gzip: write: `%s'\n"
+msgstr "%s: erro interno do gzip: write: `%s'"
 
 #: dpkg-deb/build.c:188
 #, c-format
@@ -3265,7 +3265,6 @@ msgstr "aviso, `%s' contém valor Prioridade `%s' definido pelo usuário\n"
 msgid "warning, `%s' contains user-defined field `%s'\n"
 msgstr ""
 "aviso, `%s' contém campo `%s' definido pelo usuário\n"
-"\""
 
 #: dpkg-deb/build.c:284
 #, c-format
