Fix segfault with getenv("PATH") returns null.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar  1 23:27:16 CST 2002 Adam Heath <doogie@debian.org>
+
+  * main/help.c, debian/changelog: Fix segfault with getenv("PATH") returns
+    null.
+
 Fri Mar  1 23:22:55 CST 2002 Adam Heath <doogie@debian.org>
 
   * configure.in: Remove old doc/*/Makefile.  Bad Wichert.
