--- a/debian/changelog
+++ b/debian/changelog
@@ -84,6 +84,7 @@ dpkg (1.10) unstable; urgency=low
   * Improve wording of update-alternatives --config text. Closes: Bug#133035
   * Add manpages for dpkg.cfg and dselect.cfg. Closes: Bug#132901
   * Improve test for illegal packagename for dpkg-gencontrol -p option
+  * Fix segfault when getenv("PATH") returns null.  Closes: Bug#136349
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
