Allow for make -j to work thru the top-level targets.  There are problems, however, as the system will try to compile the programs before libdpkg is done.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Mar  1 23:51:06 CST 2002 Adam Heath <doogie@debian.org>
+
+  * Makefile.in: Allow for make -j to work thru the top-level targets.
+    There are problems, however, as the system will try to compile the
+    programs before libdpkg is done.
+
 Fri Mar  1 23:27:16 CST 2002 Adam Heath <doogie@debian.org>
 
   * main/help.c, debian/changelog: Fix segfault with getenv("PATH") returns
