--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr  1 18:57:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * dselect/pkgdepcon.cc: treat enhances like suggests in
+    packagelist::resolvedepcon()
+
 Mon Mar 11 23:22:37 CST 2002 Adam Heath <doogie@debian.org>
 
   * configure.in: Bad Wichert.  Always modify configure.in when adding
