Add LFS support

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Apr 10 00:39:58 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * configure.in: use AC_SYS_LARGEFILE and bump autoconf requirement to 2.50
+    since 2.13 does not include AC_SYS_LARGEFILE
+  * utils/md5sum.h: include config.h earlier so we pick up the LFS flags
+    before including the system includefiles
+
 Mon Apr  1 18:57:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * dselect/pkgdepcon.cc: treat enhances like suggests in
