Fix typo in dpkg-source manpage

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Wed Apr 10 00:39:58 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
     since 2.13 does not include AC_SYS_LARGEFILE
   * utils/md5sum.h: include config.h earlier so we pick up the LFS flags
     before including the system includefiles
+  * scripts/dpkg-source.1: fix typo (shlib instead of shlibs)
 
 Mon Apr  1 18:57:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
