--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -1,4 +1,3 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Ian Jackson
 .TH DPKG\-SOURCE 1 "Januari 2000" "Debian Project" "dpkg utilities"
 .SH NAME 
@@ -497,11 +496,11 @@ one representing the most important dependencies.
 Causes substitution variables to start with
 .IB varnameprefix :
 instead of
-.BR shlib: .
+.BR shlibs: .
 Likewise, any existing substitution variables starting with
 .IB varnameprefix :
 (rather than
-.BR shlib: )
+.BR shlibs: )
 are removed from the the substitution variables file.
 .TP
 .BI -L localshlibsfile
