--- a/debian/changelog
+++ b/debian/changelog
@@ -86,6 +86,7 @@ dpkg (1.10) unstable; urgency=low
   * Improve test for illegal packagename for dpkg-gencontrol -p option
   * Fix segfault when getenv("PATH") returns null.  Closes: Bug#136349
   * Add Large File Summit extensions. Closes: Bug#130509
+  * Fix typo in dpkg-source manpage. Closes: Bug#141906
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
