Add docbook version of dpkg(8)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr 12 18:46:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * man/en/dpkg.8.sgml: DocBook version of dpkg manpage
+
 Wed Apr 10 00:39:58 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * configure.in: use AC_SYS_LARGEFILE and bump autoconf requirement to 2.50
