--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 13 18:34:09 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * man/en/dselect.8.sgml: DocBook version of dselect manpage
+
 Fri Apr 12 18:46:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * man/en/dpkg.8.sgml: DocBook version of dpkg manpage
