--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ Sat Apr 13 18:34:09 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
   * man/en/dselect.8.sgml: DocBook version of dselect manpage
   * man/en/dselect.cfg.5.sgml: DocBook version of dselect.cfg manpage
   * man/en/dpkg.cfg.5.sgml: DocBook version of dpkg.cfg manpage
-
+  * man/en/deb.5.sgml: DocBook version of deb manpage
 
 Fri Apr 12 18:46:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
