--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 13 18:07:48 CET 2002 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Removed fuzzy translation.
+
 Sat Apr 13 18:34:09 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * man/en/dselect.8.sgml: DocBook version of dselect manpage
