Add DocBook version of deb-control(5) manpage

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 13 22:59:25 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * man/en/deb-control.5.sgml: DocBook version of deb-control manpage
+
 Sat Apr 13 18:07:48 CET 2002 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Removed fuzzy translation.
