--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 14 00:49:09 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * scripts/controlllib.pl: accept multilpe consectucive empty lines
+
 Sat Apr 13 22:59:25 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * man/en/deb-control.5.sgml: DocBook version of deb-control manpage
