--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 14 16:13:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * man/en/deb-old.5.sgml: DocBook version of deb-old manpage
+
 Sun Apr 14 00:49:09 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * scripts/controlllib.pl: accept multilpe consectucive empty lines
