--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Sun Apr 14 16:13:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * man/en/deb-old.5.sgml: DocBook version of deb-old manpage
+  * man/en/cleanup-info.8.sgml: DocBook version of cleanup-info manpage
 
 Sun Apr 14 00:49:09 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
