Add DocBook version of dpkg-checkbuilddeps(1) manpage

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Sun Apr 14 16:13:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * man/en/deb-old.5.sgml: DocBook version of deb-old manpage
   * man/en/cleanup-info.8.sgml: DocBook version of cleanup-info manpage
+  * man/en/dpkg-checkbuilddeps.1.sgml: DocBook version of dpkg-checkbuilds
+    manpage
 
 Sun Apr 14 00:49:09 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
