mark another bug as closeable

--- a/debian/changelog
+++ b/debian/changelog
@@ -87,6 +87,7 @@ dpkg (1.10) unstable; urgency=low
   * Fix segfault when getenv("PATH") returns null.  Closes: Bug#136349
   * Add Large File Summit extensions. Closes: Bug#130509
   * Fix typo in dpkg-source manpage. Closes: Bug#141906
+  * Re-fix handling of multiple blank lines in control. Closes: Bug#143117
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
