add DIFF #define

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 21 12:23:40 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * include/dpkg.h.in: add DIFF #define
+  * main/configure.c: use it
+
 Sun Apr 14 16:13:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * man/en/deb-old.5.sgml: DocBook version of deb-old manpage
@@ -7,7 +12,7 @@ Sun Apr 14 16:13:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
 Sun Apr 14 00:49:09 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
-  * scripts/controlllib.pl: accept multilpe consectucive empty lines
+  * scripts/controlllib.pl: accept multilpe consecutive empty lines
 
 Sat Apr 13 22:59:25 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
