Expand all paths before substitution

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Sun May  5 22:27:50 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * configure.in: expand all paths before doing substitution
+
+Sun May  5 17:42:21 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * Makefile.conf.in: use @PACKAGE@ for dpkgconfdir as well
+  * man/paths.ent.in: new file
+  * configure.in: generate man/paths.ent
+
 Sun Apr 21 12:23:40 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * include/dpkg.h.in: add DIFF #define
