Update Ian Jacksons' email address

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May  6 16:26:51 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * lots-a-files: update email address for Ian Jackson
+
 Sun May  5 22:27:50 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * configure.in: expand all paths before doing substitution
