--- a/man/fr/start-stop-daemon.8
+++ b/man/fr/start-stop-daemon.8
@@ -175,7 +175,7 @@ Affiche une aide et se termine.
 Affiche le numéro de version et se termine.
 
 .SH AUTEURS
-Ian Jackson <ijackson@gnu.ai.mit.edu>
+Ian Jackson <ian.greenend.org.uk>
 
 Marek Michalkiewicz <marekm@i17linuxb.ists.pwr.wroc.pl>
 
