--- a/man/sv/start-stop-daemon.8
+++ b/man/sv/start-stop-daemon.8
@@ -223,7 +223,7 @@ Skriv ut versionsinformation och avsluta sedan.
 
 .SH FÖRFATTARE
 Marek Michalkiewicz <marekm@i17linuxb.ists.pwr.wroc.pl>, baserat på en
-tidigare version av Ian Jackson <ian.greenend.org.uk>.
+tidigare version av Ian Jackson <ian@chiark.greenend.org.uk>.
 
 Manualsida av Klee Dienes <klee@mit.edu>, delvis omformaterad av
 Ian Jackson, översatt av Peter Karlsson <peterk@debian.org>.
