--- a/THANKS
+++ b/THANKS
@@ -20,7 +20,7 @@ Guy Maor <maor@debian.org>
 Hartmut Koptein <koptein@naffel.de>
 Heiko Schlittermann <heiko@lotte.sax.de>
 Hiroshi KISE <fuyuneko@ryukyu.ne.jp>
-Ian Jackson <ian.greenend.org.uk>
+Ian Jackson <ian@chiark.greenend.org.uk>
 Ian Murdock <imurdock@debian.org>
 Ivo Timmermans <itimmermans@bigfoot.com>
 J.H.M. Dassen <jdassen@cistron.nl>
