--- a/debian/changelog
+++ b/debian/changelog
@@ -88,6 +88,7 @@ dpkg (1.10) unstable; urgency=low
   * Add Large File Summit extensions. Closes: Bug#130509
   * Fix typo in dpkg-source manpage. Closes: Bug#141906
   * Re-fix handling of multiple blank lines in control. Closes: Bug#143117
+  * Document --force-confmiss and --force-bad-verify. Closes: Bug#146855
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
