Update Danish translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ dpkg (1.10) unstable; urgency=low
   * Update Polish translation. Closes: Bug#115783
   * Update French translation.
   * Update Brazilian translation.
+  * Update Danish translation.
   * Add Catalan translation
   * Add German md5sum manpage
   * Add Brazilian update-alternatives manpage. Closes: Bug#122132
