Use the configure detected gcc __attribute__ macros, instead of hard-coding them.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * optlib/error.h, optlib/getopt.c, utils/start-stop-daemon.c: Use
+    the configure detected gcc __attribute__ macros, instead of
+    hard-coding them.
+
 Thu May 16 19:09:48 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * po/da.po: New version from Claus Hindsgaul <claus_h@image.dk>
