--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>
 
+  * config.h.bot, configure.in, optlib/getopt.c: Define an UNUSED macro,
+    for __attribute__((unused)).
+
+Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>
+
   * optlib/error.h, optlib/getopt.c, utils/start-stop-daemon.c: Use
     the configure detected gcc __attribute__ macros, instead of
     hard-coding them.
