Oops.  Forgot to add #undef HAVE_GNUC25_UNUSED.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>
 
+  * acconfig.h: Oops.  Forgot to add #undef HAVE_GNUC25_UNUSED.
+
+Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>
+
   * config.h.bot, configure.in, optlib/getopt.c: Define an UNUSED macro,
     for __attribute__((unused)).
 
