Fix targets, so that if configure fails, but actually succeeds in creating config.status(as might happen if one has a c-style comment in configure.in, and the shell trys running /foo), then the build will actually fail correctly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun May 19 04:09:25 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/rules: Fix targets, so that if configure fails, but actually
+    succeeds in creating config.status(as might happen if one has a
+    c-style comment in configure.in, and the shell trys running /foo), then
+    the build will actually fail correctly.
+
 Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>
 
   * acconfig.h: Oops.  Forgot to add #undef HAVE_GNUC25_UNUSED.
