--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun May 19 04:56:51 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/rules:  Oops.  The command to run is aclocal, not aclocal.m4.
+
 Sun May 19 04:45:41 CDT 2002 Adam Heath <doogie@debian.org>
 
   * configure.in, config.h.bot(removed), acconfig.h(removed):  The latest
