--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun May 19 06:05:24 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * configure.in: Split out the -W*-prototype warnings into separate
+    checks.
+
 Sun May 19 06:01:31 CDT 2002 Adam Heath <doogie@debian.org>
 
   * configure.in, automake/dpkg.m4: Make a new macro, DPKG_C_GCC_ATTRIBUTE.
