--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun, 19 May 2002 22:56:41 -0500 Adam Heath <doogie@debian.org>
+
+  * utils/md5sum.c: Fairly heavy work(net no lines changed), to fix
+    longjmp() clashing variable warnings.  Also, a few miscellaneous gcc
+    -W<foo> fixes.
+
 Sun May 19 20:25:05 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/showpkg.c, lib/utils.c, optlib/long-options.c, main/archives.c,
