--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue May 21 17:20:12 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * debian/dpkg.postinst: remove compat stuff for ancient dpkg versions.
+    This also enables the /usr/info/dir move code which was never reached
+
+
 Mon May 20 00:58:17 CDT 2002 Adam Heath <doogie@debian.org>
 
   * main/enquiry.c, main/main.h, utils/md5sum.c, split/dpkg-split.h,
