--- a/debian/changelog
+++ b/debian/changelog
@@ -90,6 +90,8 @@ dpkg (1.10) unstable; urgency=low
   * Fix typo in dpkg-source manpage. Closes: Bug#141906
   * Re-fix handling of multiple blank lines in control. Closes: Bug#143117
   * Document --force-confmiss and --force-bad-verify. Closes: Bug#146855
+  * Drop upgrade compat stuff in dpkg postinst for ancient versions (over
+    5 years old)
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
