Remove hash.c from SOURCES, as it is a test file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed May 22 13:03:41 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/Makefile.in: Remove hash.c from SOURCES, as it is a test file.
+
 Tue May 21 17:20:12 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/dpkg.postinst: remove compat stuff for ancient dpkg versions.
