--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu May 23 11:16:28 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/lock.c: Always set CLOEXEC on the lock fd.
+
 Wed May 22 13:03:41 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/Makefile.in: Remove hash.c from SOURCES, as it is a test file.
