Add items for --reconfigure and --call-maint-script.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu May 23 15:21:09 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * TODO: Add items for --reconfigure and --call-maint-script.
+
 Thu May 23 11:16:28 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/lock.c: Always set CLOEXEC on the lock fd.
