Use setcloexec wrapper instead of calling fcntl directly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu May 23 23:23:03 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/lock.c: Use setcloexec wrapper instead of calling fcntl directly.
+
 Thu May 23 15:21:09 CDT 2002 Adam Heath <doogie@debian.org>
 
   * TODO: Add items for --reconfigure and --call-maint-script.
