New functions, standard_startup, standard_shutdown, that contain the most common functions that all dpkg binaries call.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri May 24 00:11:01 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * include/dpkg.h.in, include/myopt.h, lib/Makefile.in, lib/myopt.c,
+    main/main.c main/query.c dpkg-deb/main.c split/main.c dselect/main.cc,
+    lib/startup.c: New functions, standard_startup, standard_shutdown, that
+    contain the most common functions that all dpkg binaries call.
+
 Thu May 23 23:23:03 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/lock.c: Use setcloexec wrapper instead of calling fcntl directly.
