Clean up after ctrl-c is received.

--- a/debian/changelog
+++ b/debian/changelog
@@ -93,6 +93,8 @@ dpkg (1.10) unstable; urgency=low
   * Drop upgrade compat stuff in dpkg postinst for ancient versions (over
     5 years old)
   * Always set CLOEXEC on the lock fd.  Closes: Bug#147872
+  * Clean up tmp files when ctrl-c is sent to dpkg-source.  Closes:
+    Bug#58653.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
