Match fields case insensitively in debian/control.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri May 24 01:10:45 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl, debian/changelog: Match fields case
+    insensitively in debian/control.
+
+Fri May 24 00:22:39 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl: Clean up after ctrl-c is received.
+
 Fri May 24 00:11:01 CDT 2002 Adam Heath <doogie@debian.org>
 
   * include/dpkg.h.in, include/myopt.h, lib/Makefile.in, lib/myopt.c,
