--- a/debian/changelog
+++ b/debian/changelog
@@ -95,6 +95,8 @@ dpkg (1.10) unstable; urgency=low
   * Always set CLOEXEC on the lock fd.  Closes: Bug#147872
   * Clean up tmp files when ctrl-c is sent to dpkg-source.  Closes:
     Bug#58653.
+  * dpkg-source no longer requires exact case matches for fields in
+    debian/control.  Closes: Bug#139159.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
