Give proper case for Source and Installed-Size.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 24 21:03:43 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-scanpackages.pl: Give proper case for Source and
+    Installed-Size.
+
 Fri May 24 01:10:45 CDT 2002 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-source.pl, debian/changelog: Match fields case
