--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 24 21:12:36 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-architecture.pl: s/build on/built on/; same for
+    'build for'.
+
 Fri May 24 21:03:43 CDT 2002 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-scanpackages.pl: Give proper case for Source and
