--- a/debian/changelog
+++ b/debian/changelog
@@ -99,6 +99,8 @@ dpkg (1.10) unstable; urgency=low
     debian/control.  Closes: Bug#139159.
   * dpkg-scanpackages now gives proper case for Source and Installed-Size.
     Closes: Bug#119532.
+  * dpkg-architecture: s/build on/built on/; same for 'build for'.
+    Closes: Bug#140441.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
