Recognize emergency as valid in changelogs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -101,6 +101,8 @@ dpkg (1.10) unstable; urgency=low
     Closes: Bug#119532.
   * dpkg-architecture: s/build on/built on/; same for 'build for'.
     Closes: Bug#140441.
+  * cl-debian.pl now recognizes emergency as valid in changelogs.
+    Closes: Bug#138013.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
