Add -I<filename> to dpkg-buildpackage and dpkg-source, to excludes files from tar, when building a native package.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri May 24 22:00:01 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-buildpackage.sh, scripts/dpkg-source.pl,
+    scripts/dpkg-source.1: Add -I<filename> to dpkg-buildpackage and
+    dpkg-source, to excludes files from tar, when building a native
+    package.
+
 Fri May 24 21:49:52 CDT 2002 Adam Heath <doogie@debian.org>
 
   * scripts/controllib.pl: Properly count recursive expansion of variables,
