--- a/debian/changelog
+++ b/debian/changelog
@@ -105,6 +105,8 @@ dpkg (1.10) unstable; urgency=low
     Closes: Bug#138013.
   * Properly count recursive expansion of variables, instead of just
     counting all variable expansions.  Closes: #144121.
+  * Add -I<filename> to dpkg-buildpackage and dpkg-source, to excludes
+    files from tar, when building a native package.  Closes: Bug#75947.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
