Close the old debian/files file, before doing a rename.

--- a/debian/changelog
+++ b/debian/changelog
@@ -107,6 +107,8 @@ dpkg (1.10) unstable; urgency=low
     counting all variable expansions.  Closes: #144121.
   * Add -I<filename> to dpkg-buildpackage and dpkg-source, to excludes
     files from tar, when building a native package.  Closes: Bug#75947.
+  * Close the old debian/files file, before doing a rename.  Closes:
+    Bug#111503.
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
