Fix documentation of -v<version> for dpkg-parsechangelog, removing the requirement that the version has to be in the changelog.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri May 24 22:11:53 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.1: Fix documentation of -v<version> for
+    dpkg-parsechangelog, removing the requirement that the version has to
+    be in the changelog.
+
 Fri May 24 22:06:48 CDT 2002 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-gencontrol.pl: Close the old debian/files file,
