--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -101,7 +101,7 @@ In
 this causes changelog information from all versions strictly later
 than
 .I version
-(which must appear in the changelog file) to be used.
+to be used.
 
 In
 .BR dpkg-gencontrol
